command_line_config.yml
apiVersion: v1
kind: Pod
metadata:
  name: fortune-args-from-config-map
spec:
  containers:
  - image: luksa/fortune:args
    name: fortune-args-from-config-map
    args: ["$(INTERVAL)"]
