configmap.yml
apiVersion: v1
kind: Pod
metadata:
  name: fortune-env-configmap
spec:
  containers:
  - image: luksa/fortune:env
    name: fortune-env-configmap
