fortune-pods-args-configmap.yml
apiVersion: v1
kind: Pod
metadata: 
  name: fortune2s
spec:
  containers:
  - image: luksa/fortune:args
    args: ["$(INTERVAL)"]
