fortune-pods-env-configmap.yml
apiVersion: v1
kind: Pod
metadata: 
  name: fortune2s
spec:
  containers:
  - image: luksa/fortune:args
