nextcloud-db.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: nextcloud-db
  labels:
    app: nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      pod-label: nextcloud-db-pod
  template:
    metadata: 
      labels:
        pod-label: nextcloud-db-pod
    spec:
      containers:
      - name: postgresql
        image: postgres:latest
