nextcloud-server.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-server
  labels:
    app: nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      pod-label: nextcloud-server-prod
  template:
    metadata:
      labels:
        app: nextcloud
        pod-label: nextcloud-server-prod
    spec:
      containers: 
      - name: nextcloud
        image: nextcloud:stable
        volumeMounts:
        - name: server-storage
          mountPath: /var/www/html
        ports:
        - name: http
          containerPort: 80
        - name: https
          containerPort: 443
      volumes:
      - name: server-storage 
        persistentVolumeClaim: 
          claimName: nextcloud-data-claim
