persistent-volulme-claim-ex.yml
apiVersion: v1
kind: Pod 
metadata: 
  name: mongodb
spec:
  containers:
  - image: mongo
    name: mongodb
    volumeMounts:
    - name: mongodb-data
      mountPath: /data/db
    ports: 
    - containerPort: 27017
      protocol: TCP
  volumes:
  - name: mongodb-data #Name of the volume
    persistentVolumeClaim: 
      claimName: mongodb-pvc
