kubia-svc-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: kubia-nodeport
spec:
  type: NodePort
  ports:
  - port: 80 #Port on the node network 
    targetPort: 8080 #Port on actual containers
    nodePort: 30123 #Externally exposed port
  selector: 
    app: kubia #How it finds containers
