load_balancer.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  annotations:
    metallb.universe.tf/address-pool: default
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: kubia
  type: LoadBalancer
