nextcloud-db_better.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-db
  labels:
    app: nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      pod-label: nextcloud-db-pod
  template:
    metadata:
      labels:
        pod-label: nextcloud-db-pod
    spec:
      containers:
      - name: postgres
        image: postgres
        volumeMounts:
        - name: db-storage
          mountPath: /var/lib/postgresql/data
          subPath: mysql-data
      volumes:
      - name: db-storage 
        persistentVolumeClaim:
          claimName: nextcloud-db-claim

---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-db
  labels:
    app: nextcloud
spec:
  selector:
    pod-label: nextcloud-db-pod
  ports:
  - protocol: TCP
    port: 5432
