nextcloud-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-nodeport
spec:
  type: NodePort
  ports:
  - port: 80 #Port on the node network 
    targetPort: 80 #Port on actual containers
    nodePort: 30124 #Externally exposed port
  selector: 
    app: nextcloud #How it finds containers 
---
apiVersion: v1
kind: Service
metadata:
  name: onlyoffice-nodeport
  labels:
    app: onlyoffice
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30125
  selector:
    pod-label: onlyoffice-server
