volume-pod-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: volume-pod-svc
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
  selector: 
    app: github-volume-pod
