nextcloud-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/send_timeout: "3m"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "3m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3m"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3m"
    nginx.ingress.kubernetes.io/proxy-body-size: 100G
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - "nextcloud.streisand.ovh"
    secretName: nextcloud-tls
  - hosts:
    - "onlyoffice.streisand.ovh"
    secretName: onlyoffice-tls
  rules:
  - host: "nextcloud.streisand.ovh"
    http: 
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nextcloud-nodeport
            port:
              number: 80
  - host: "onlyoffice.streisand.ovh"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend: 
          service:
            name: onlyoffice-nodeport
            port:
              number: 80
